# pare

./: CHANGELOG.md  Cargo.toml  README.md  changelog.rss  index.html
changelog/: index.html
src/: main.rs
wix/: main.wxs
