[package]
name = "pare"
version = "0.1.0"
edition = "2021"
authors = ["Michael Gattozzi <michael@ductile.systems>"]
repository = "https://github.com/mgattozzi/pare"
description = "A cross platform clipboard manager and monitor"

[dependencies]
arboard = "3.4.0"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
error-stack = "0.4.1"
ratatui = "0.26.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
